@@ -27,6 +27,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "Configuration.h"
 #include <iostream>
 #include <string>
+#include <cassert>
 #include "common_types.h"
 
 using std::string;
