@@ -27,6 +27,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #endif
 
 #include <stdio.h>
+#include <cassert>
 #include "ucfun.h"
 #include "ucstmt.h"
 #include "utils.h"
